--- a/rbzi.html
+++ b/rbzi.html
@@ -20,10 +20,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">PEKPPP</a>
+                        <a class="nav-link" aria-current="page" href="index.html">PEKPPP</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="rbzi.html">WBK-WBBM</a>
+                        <a class="nav-link active" href="rbzi.html">WBK-WBBM</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="pss.html">P S S</a>
@@ -242,6 +242,48 @@
                             </div>
                         </div>
                     </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading4Tab2">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4Tab2" aria-expanded="false" aria-controls="collapse4Tab2">
+                                Peta Proses Bisnis Mempengaruhi Penyederhanaan Jabatan
+                            </button>
+                        </h2>
+                        <div id="collapse4Tab2" class="accordion-collapse collapse" aria-labelledby="heading4Tab2" data-bs-parent="#accordionTab2">
+                            <div class="accordion-body">
+                                <br>
+                                <p>Telah disusun peta proses bisnis dengan adanya penyederhanaan jabatan</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading5Tab2">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5Tab2" aria-expanded="false" aria-controls="collapse5Tab2">
+                                Sistem Pemerintahan Berbasis Elektronik (SPBE) yang Terintegrasi
+                            </button>
+                        </h2>
+                        <div id="collapse5Tab2" class="accordion-collapse collapse" aria-labelledby="heading5Tab2" data-bs-parent="#accordionTab2">
+                            <div class="accordion-body">
+                                <br>
+                                <p>a. Implementasi SPBE telah terintegrasi dan mampu mendorong pelaksanaan pelayanan publik yang lebih cepat dan efisien</p>
+                                <p>b. Implementasi SPBE telah terintegrasi dan mampu mendorong pelaksanaan pelayanan internal organisasi yang lebih cepat dan efisien</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading6Tab2">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6Tab2" aria-expanded="false" aria-controls="collapse6Tab2">
+                                Transformasi Digital Memberikan Nilai Manfaat
+                            </button>
+                        </h2>
+                        <div id="collapse6Tab2" class="accordion-collapse collapse" aria-labelledby="heading6Tab2" data-bs-parent="#accordionTab2">
+                            <div class="accordion-body">
+                                <br>
+                                <p>a. Transformasi digital pada bidang proses bisnis utama telah mampu memberikan nilai manfaat bagi unit kerja secara optimal</p>
+                                <p>b. Transformasi digital pada bidang administrasi pemerintahan telah mampu memberikan nilai manfaat bagi unit kerja secara optimal</p>
+                                <p>c. Transformasi digital pada bidang pelayanan publik telah mampu memberikan nilai manfaat bagi unit kerja secara optimal</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -339,6 +381,45 @@
                             </div>
                         </div>
                     </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading7Tab3">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7Tab3" aria-expanded="false" aria-controls="collapse7Tab3">
+                                Kinerja Individu
+                            </button>
+                        </h2>
+                        <div id="collapse7Tab3" class="accordion-collapse collapse" aria-labelledby="heading7Tab3" data-bs-parent="#accordionTab3">
+                            <div class="accordion-body">
+                                <br>
+                                <p>Ukuran kinerja individu telah berorientasi hasil (outcome) sesuai pada levelnya</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading8Tab3">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8Tab3" aria-expanded="false" aria-controls="collapse8Tab3">
+                                Assessment Pegawai
+                            </button>
+                        </h2>
+                        <div id="collapse8Tab3" class="accordion-collapse collapse" aria-labelledby="heading8Tab3" data-bs-parent="#accordionTab3">
+                            <div class="accordion-body">
+                                <br>
+                                <p>Hasil assement telah dijadikan pertimbangan untuk mutasi dan pengembangan karir pegawai</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading9Tab3">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse9Tab3" aria-expanded="false" aria-controls="collapse9Tab3">
+                                Pelanggaran Disiplin Pegawai
+                            </button>
+                        </h2>
+                        <div id="collapse9Tab3" class="accordion-collapse collapse" aria-labelledby="heading9Tab3" data-bs-parent="#accordionTab3">
+                            <div class="accordion-body">
+                                <br>
+                                <p>Penurunan pelanggaran disiplin pegawai</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -378,6 +459,45 @@
                                 <p>f. Laporan kinerja telah memberikan informasi tentang kinerja</p>
                                 <p>g. Terdapat sistem informasi/mekanisme informasi kinerja</p>
                                 <p>h. Unit kerja telah berupaya meningkatkan kapasitas SDM yang menangangi akuntabilitas kinerja</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading3Tab4">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3Tab4" aria-expanded="false" aria-controls="collapse3Tab4">
+                                Meningkatnya capaian kinerja unit kerja
+                            </button>
+                        </h2>
+                        <div id="collapse3Tab4" class="accordion-collapse collapse" aria-labelledby="heading3Tab4" data-bs-parent="#accordionTab4">
+                            <div class="accordion-body">
+                                <br>
+                                <p>Persentase Sasaran dengan capaian 100% atau lebih</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading4Tab4">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4Tab4" aria-expanded="false" aria-controls="collapse4Tab4">
+                                Pemberian Reward and Punishment
+                            </button>
+                        </h2>
+                        <div id="collapse4Tab4" class="accordion-collapse collapse" aria-labelledby="heading4Tab4" data-bs-parent="#accordionTab4">
+                            <div class="accordion-body">
+                                <br>
+                                <p>Hasil Capaian/Monitoring Perjanjian Kinerja telah dijadikan dasar sebagai pemberian reward and punishment bagi organisasi</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading5Tab4">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5Tab4" aria-expanded="false" aria-controls="collapse5Tab4">
+                                Kerangka Logis Kinerja
+                            </button>
+                        </h2>
+                        <div id="collapse5Tab4" class="accordion-collapse collapse" aria-labelledby="heading5Tab4" data-bs-parent="#accordionTab4">
+                            <div class="accordion-body">
+                                <br>
+                                <p>Apakah terdapat penjenjangan kinerja (Kerangka Logis Kinerja) yang mengacu pada kinerja utama organisasi dan dijadikan dalam penentuan kinerja seluruh pegawai?</p>
                             </div>
                         </div>
                     </div>
@@ -466,6 +586,58 @@
                             </div>
                         </div>
                     </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading6Tab5">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6Tab5" aria-expanded="false" aria-controls="collapse6Tab5">
+                                Mekanisme Pengendalian
+                            </button>
+                        </h2>
+                        <div id="collapse6Tab5" class="accordion-collapse collapse" aria-labelledby="heading6Tab5" data-bs-parent="#accordionTab5">
+                            <div class="accordion-body">
+                                <br>
+                                <p>Telah dilakukan mekanisme pengendalian aktivitas secara berjenjang</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading7Tab5">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7Tab5" aria-expanded="false" aria-controls="collapse7Tab5">
+                                Penanganan Pengaduan Masyarakat
+                            </button>
+                        </h2>
+                        <div id="collapse7Tab5" class="accordion-collapse collapse" aria-labelledby="heading7Tab5" data-bs-parent="#accordionTab5">
+                            <div class="accordion-body">
+                                <br>
+                                <p>Persentase penanganan pengaduan masyarakat</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading8Tab5">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8Tab5" aria-expanded="false" aria-controls="collapse8Tab5">
+                                Penyampaian Laporan Harta Kekayaan Pejabat Negara (LHKPN)
+                            </button>
+                        </h2>
+                        <div id="collapse8Tab5" class="accordion-collapse collapse" aria-labelledby="heading8Tab5" data-bs-parent="#accordionTab5">
+                            <div class="accordion-body">
+                                <br>
+                                <p>Persentase penyampaian LHKPN</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading9Tab5">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse9Tab5" aria-expanded="false" aria-controls="collapse9Tab5">
+                                Penyampaian Laporan Harta Kekayaan Non LHKPN (Tidak Wajib LHKPN)
+                            </button>
+                        </h2>
+                        <div id="collapse9Tab5" class="accordion-collapse collapse" aria-labelledby="heading9Tab5" data-bs-parent="#accordionTab5">
+                            <div class="accordion-body">
+                                <br>
+                                <p>Persentase penyampaian Non LHKPN (LHKASN/SPT)</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -549,6 +721,51 @@
                                 <p>a. Telah menerapkan teknologi informasi dalam memberikan pelayanan</p>
                                 <p>b. Telah membangun database pelayanan yang terintegrasi</p>
                                 <p>c. Telah dilakukan perbaikan secara terus menerus</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading6Tab6">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6Tab6" aria-expanded="false" aria-controls="collapse6Tab6">
+                                Upaya dan/atau Inovasi Pelayanan Publik
+                            </button>
+                        </h2>
+                        <div id="collapse6Tab6" class="accordion-collapse collapse" aria-labelledby="heading6Tab6" data-bs-parent="#accordionTab6">
+                            <div class="accordion-body">
+                                <br>
+                                <p>a. Upaya dan/atau inovasi telah mendorong perbaikan pelayanan publik pada:</p>
+                                <ol>
+                                    <li>Kesesuaian Persyaratan</li>
+                                    <li>Kemudahan Sistem, Mekanisme, dan Prosedur</li>
+                                    <li>Kecepatan Waktu Penyelesaian</li> 
+                                    <li>Kejelasan Biaya/Tarif, Gratis</li>
+                                    <li>Kualitas Produk Spesifikasi Jenis Pelayanan</li>
+                                    <li>Kompetensi Pelaksana/Web</li>
+                                    <li>Perilaku Pelaksana/Web</li>
+                                    <li>Kualitas Sarana dan prasarana</li>
+                                    <li>Penanganan Pengaduan, Saran dan Masukan</li>
+                                </ol>
+                                <p>
+                                    b. Upaya dan/atau inovasi pada perijinan/pelayanan telah dipermudah:</p>
+                                    <ol>
+                                    <li>Waktu lebih cepat</li>
+                                    <li>Pelayanan Publik yang terpadu</li>
+                                    <li>Alur lebih pendek/singkat</li>
+                                    <li>Terintegrasi dengan aplikasi</li>
+                                    </ol>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading7Tab6">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7Tab6" aria-expanded="false" aria-controls="collapse7Tab6">
+                                Penanganan Pengaduan Pelayanan dan Konsultasi
+                            </button>
+                        </h2>
+                        <div id="collapse7Tab6" class="accordion-collapse collapse" aria-labelledby="heading7Tab6" data-bs-parent="#accordionTab6">
+                            <div class="accordion-body">
+                                <br>
+                                <p>Penanganan pengaduan pelayanan dilakukan melalui berbagai kanal/media secara responsive dan bertanggung jawab</p>
                             </div>
                         </div>
                     </div>
