--- a/sakip.html
+++ b/sakip.html
@@ -13,7 +13,7 @@
     <!-- Sticky Header -->
     <header class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">RB-ZI-WBK-WBBM</a>
+            <a class="navbar-brand" href="#">SAKIP</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -23,10 +23,10 @@
                         <a class="nav-link" aria-current="page" href="index.html">PEKPPP</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="rbzi.html">WBK-WBBM</a>
+                        <a class="nav-link" href="rbzi.html">WBK-WBBM</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sakip.html">SAKIP</a>
+                        <a class="nav-link active" href="sakip.html">SAKIP</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="pss.html">P S S</a>
