apdet konten si cantik

--- a/sakip.html
+++ b/sakip.html
@@ -392,6 +392,10 @@
         
     </main>
 
+    <footer class="text-center">
+        <p>@fhy3273</p>
+    </footer>
+    
     <!-- Theme Settings Modal -->
     <div class="modal fade" id="themeSettingsModal" tabindex="-1" aria-labelledby="themeSettingsModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
