--- a/epss.html
+++ b/epss.html
@@ -53,45 +53,39 @@
         <!-- Tab Navigation -->
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="true">Pilar 1</button>
+                <button class="nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="true">Domain 1</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab" aria-controls="tab2" aria-selected="false">Pilar 2</button>
+                <button class="nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab" aria-controls="tab2" aria-selected="false">Domain 2</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3" type="button" role="tab" aria-controls="tab3" aria-selected="false">Pilar 3</button>
+                <button class="nav-link" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3" type="button" role="tab" aria-controls="tab3" aria-selected="false">Domain 3</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="tab4-tab" data-bs-toggle="tab" data-bs-target="#tab4" type="button" role="tab" aria-controls="tab4" aria-selected="false">Pilar 4</button>
+                <button class="nav-link" id="tab4-tab" data-bs-toggle="tab" data-bs-target="#tab4" type="button" role="tab" aria-controls="tab4" aria-selected="false">Domain 4</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="tab5-tab" data-bs-toggle="tab" data-bs-target="#tab5" type="button" role="tab" aria-controls="tab5" aria-selected="false">Pilar 5</button>
-            </li>
-            <li class="nav-item" role="presentation">
-                <button class="nav-link" id="tab6-tab" data-bs-toggle="tab" data-bs-target="#tab6" type="button" role="tab" aria-controls="tab6" aria-selected="false">Pilar 6</button>
+                <button class="nav-link" id="tab5-tab" data-bs-toggle="tab" data-bs-target="#tab5" type="button" role="tab" aria-controls="tab5" aria-selected="false">Domain 5</button>
             </li>
         </ul>
 
         <!-- Tab Content - Content will be dynamically loaded by JavaScript -->
         <div class="tab-content border border-top-0 p-3" id="myTabContent">
-            <!-- Pilar 1 -->
+            <!-- Domain 1 -->
             <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
-                <h3>Pilar 1. MANAJEMEN PERUBAHAN</h3>
+                <h3>Domain 1. Prinsip Satu Data Indonesia</h3>
                 <br>
                 <div class="accordion" id="accordionTab1">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab1">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab1" aria-expanded="true" aria-controls="collapse1Tab1">
-                                1.	Penyusunan Tim Kerja
+                                Penerapan Standar Data Statistik (SDS)
                             </button>
                         </h2>
                         <div id="collapse1Tab1" class="accordion-collapse collapse" aria-labelledby="heading1Tab1" data-bs-parent="#accordionTab1">
                             <div class="accordion-body">
                                 <br>
-                                <p>
-                                    a. Unit kerja telah membentuk tim untuk melakukan pembangunan Zona Integritas menuju WBK/WBBM
-                                </p>
-                                <p>b. Penentuan anggota tim selain pimpinan dipilih melalui prosedur/mekanisme yang jelas</p>
+                                <p></p>
                             </div>
                         </div>
                     </div>
@@ -99,17 +93,13 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading2Tab1">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2Tab1" aria-expanded="false" aria-controls="collapse2Tab1">
-                                2. Rencana Pembangunan Zona Integritas menuju WBK/WBBM.
+                                Penerapan Metadata Statistik
                             </button>
                         </h2>
                         <div id="collapse2Tab1" class="accordion-collapse collapse" aria-labelledby="heading2Tab1" data-bs-parent="#accordionTab1">
                             <div class="accordion-body">
                                 <br>
-                                <p>
-                                    a. Terdapat dokumen rencana kerja pembangunan Zona Integritas menuju WBK/WBBM telah disusun
-                                </p>
-                                <p>b. Dalam dokumen pembangunan terdapat target-target prioritas yang relevan dengan tujuan pembangunan WBK/WBBM</p>
-                                <p>Terdapat mekanisme atau media untuk mensosialisasikan pembangunan WBK/WBBM</p>
+                                <p></p>
                             </div>
                         </div>
                     </div>
@@ -117,17 +107,13 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading3Tab1">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3Tab1" aria-expanded="false" aria-controls="collapse3Tab1">
-                                3. Pemantauan dan Evaluasi Pembangunan WBK/WBBM.
+                                Penerapan Interoperabilitas Data
                             </button>
                         </h2>
                         <div id="collapse3Tab1" class="accordion-collapse collapse" aria-labelledby="heading3Tab1" data-bs-parent="#accordionTab1">
                             <div class="accordion-body">
                                 <br>
-                                <p>
-                                    a. Seluruh kegiatan pembangunan sudah dilaksanakan sesuai dengan rencana
-                                </p>
-                                <p>b. Terdapat monitoring dan evaluasi terhadap pembangunan Zona Integritas</p>
-                                <p>c. Hasil Monitoring dan Evaluasi telah ditindaklanjuti</p>
+                                <p></p>
                             </div>
                         </div>
                     </div>
@@ -135,65 +121,22 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading4Tab1">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4Tab1" aria-expanded="false" aria-controls="collapse4Tab1">
-                                4. Perubahan pola pikir dan budaya kerja.
+                                Penerapan Kode Referensi
                             </button>
                         </h2>
                         <div id="collapse4Tab1" class="accordion-collapse collapse" aria-labelledby="heading4Tab1" data-bs-parent="#accordionTab1">
                             <div class="accordion-body">
                                 <br>
-                                <p>a. Pimpinan berperan sebagai role model dalam pelaksanaan Pembangunan WBK/WBBM.</p>
-                                <p>b. Sudah ditetapkan agen perubahan.</p>
-                                <p>c. Telah dibangun budaya kerja dan pola pikir di lingkungan organisasi.</p>
-                                <p>d. Anggota organisasi terlibat dalam pembangunan Zona Integritas menuju WBK/WBBM.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading5Tab1">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5Tab1" aria-expanded="false" aria-controls="collapse5Tab1">
-                                Komitmen dalam perubahan
-                            </button>
-                        </h2>
-                        <div id="collapse5Tab1" class="accordion-collapse collapse" aria-labelledby="heading5Tab1" data-bs-parent="#accordionTab1">
-                            <div class="accordion-body">
-                                <br>
-                                <p>a. Agen perubahan telah membuat perubahan yang konkret di Instansi (dalam 1 tahun)</p>
-                                <p>b. Perubahan yang dibuat Agen Perubahan telah terintegrasi dalam sistem manajemen</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading6Tab1">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6Tab1" aria-expanded="false" aria-controls="collapse6Tab1">
-                                Komitmen Pimpinan
-                            </button>
-                        </h2>
-                        <div id="collapse6Tab1" class="accordion-collapse collapse" aria-labelledby="heading6Tab1" data-bs-parent="#accordionTab1">
-                            <div class="accordion-body">
-                                <br>
-                                <p>a. Pimpinan memiliki komitmen terhadap pelaksanaan reformasi birokrasi, dengan adanya target capaian reformasi yang jelas di dokumen perencanaan</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading7Tab1">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7Tab1" aria-expanded="false" aria-controls="collapse7Tab1">
-                                Membangun Budaya Kerja
-                            </button>
-                        </h2>
-                        <div id="collapse7Tab1" class="accordion-collapse collapse" aria-labelledby="heading7Tab1" data-bs-parent="#accordionTab1">
-                            <div class="accordion-body">
-                                <br>
-                                <p>a. Instansi membangun budaya kerja positif dan menerapkan nilai-nilai organisasi dalam pelaksanaan tugas sehari-hari</p>
+                                <p></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Pilar 2 -->
+            <!-- Domain 2 -->
             <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
-                <h3>Pilar 2. PENATAAN TATALAKSANA</h3>
+                <h3>Domain 2. Kualitas Data</h3>
                 <div class="accordion" id="accordionTab2">
                     <!-- 10 -->
                     <div class="accordion-item">
@@ -290,9 +233,9 @@
                 </div>
             </div>
 
-            <!-- Pilar 3 -->
+            <!-- Domain 3 -->
             <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-                <h3>Pilar 3. PENATAAN SISTEM MANAJEMEN SDM APARATUR</h3>
+                <h3>Domain 3. PENATAAN SISTEM MANAJEMEN SDM APARATUR</h3>
                 <div class="accordion" id="accordionTab3">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab3">
@@ -426,9 +369,9 @@
                 </div>
             </div>
 
-            <!-- Pilar 4 -->
+            <!-- Domain 4 -->
             <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
-                <h3>Pilar 4. PENGUATAN AKUNTABILITAS</h3>
+                <h3>Domain 4. PENGUATAN AKUNTABILITAS</h3>
                 <div class="accordion" id="accordionTab4">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab4">
@@ -507,9 +450,9 @@
                 </div>
             </div>
 
-            <!-- Pilar 5 -->
+            <!-- Domain 5 -->
             <div class="tab-pane fade" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
-                <h3>Pilar 5. PENGUATAN PENGAWASAN</h3>
+                <h3>Domain 5. PENGUATAN PENGAWASAN</h3>
                 <div class="accordion" id="accordionTab5">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab5">
@@ -644,9 +587,9 @@
                 </div>
             </div>
 
-            <!-- Pilar 6 -->
+            <!-- Domain 6 -->
             <div class="tab-pane fade" id="tab6" role="tabpanel" aria-labelledby="tab6-tab">
-                <h3>Pilar 6. PENINGKATAN KUALITAS PELAYANAN PUBLIK</h3>
+                <h3>Domain 6. PENINGKATAN KUALITAS PELAYANAN PUBLIK</h3>
                 <div class="accordion" id="accordionTab6">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab6">
@@ -777,6 +720,10 @@
         </div>
     </main>
 
+    <footer class="text-center">
+        <p>@fhy3273</p>
+    </footer>
+    
     <!-- Theme Settings Modal -->
     <div class="modal fade" id="themeSettingsModal" tabindex="-1" aria-labelledby="themeSettingsModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
