apdet konten epss

--- a/pss.html
+++ b/pss.html
@@ -53,30 +53,30 @@
         <!-- Tab Navigation -->
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="true">Pilar 1</button>
+                <button class="nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="true">Domain 1</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab" aria-controls="tab2" aria-selected="false">Pilar 2</button>
+                <button class="nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab" aria-controls="tab2" aria-selected="false">Domain 2</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3" type="button" role="tab" aria-controls="tab3" aria-selected="false">Pilar 3</button>
+                <button class="nav-link" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3" type="button" role="tab" aria-controls="tab3" aria-selected="false">Domain 3</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="tab4-tab" data-bs-toggle="tab" data-bs-target="#tab4" type="button" role="tab" aria-controls="tab4" aria-selected="false">Pilar 4</button>
+                <button class="nav-link" id="tab4-tab" data-bs-toggle="tab" data-bs-target="#tab4" type="button" role="tab" aria-controls="tab4" aria-selected="false">Domain 4</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="tab5-tab" data-bs-toggle="tab" data-bs-target="#tab5" type="button" role="tab" aria-controls="tab5" aria-selected="false">Pilar 5</button>
+                <button class="nav-link" id="tab5-tab" data-bs-toggle="tab" data-bs-target="#tab5" type="button" role="tab" aria-controls="tab5" aria-selected="false">Domain 5</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="tab6-tab" data-bs-toggle="tab" data-bs-target="#tab6" type="button" role="tab" aria-controls="tab6" aria-selected="false">Pilar 6</button>
+                <button class="nav-link" id="tab6-tab" data-bs-toggle="tab" data-bs-target="#tab6" type="button" role="tab" aria-controls="tab6" aria-selected="false">Pembinaan</button>
             </li>
         </ul>
 
         <!-- Tab Content - Content will be dynamically loaded by JavaScript -->
         <div class="tab-content border border-top-0 p-3" id="myTabContent">
-            <!-- Pilar 1 -->
+            <!-- Domain 1 -->
             <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
-                <h3>Pilar 1. MANAJEMEN PERUBAHAN</h3>
+                <h3>Domain 1. Prinsip Satu Data Indonesia</h3>
                 <br>
                 <div class="accordion" id="accordionTab1">
                     <div class="accordion-item">
@@ -191,9 +191,9 @@
                 </div>
             </div>
 
-            <!-- Pilar 2 -->
+            <!-- Domain 2 -->
             <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
-                <h3>Pilar 2. PENATAAN TATALAKSANA</h3>
+                <h3>Domain 2. Kualitas Data</h3>
                 <div class="accordion" id="accordionTab2">
                     <!-- 10 -->
                     <div class="accordion-item">
@@ -290,9 +290,9 @@
                 </div>
             </div>
 
-            <!-- Pilar 3 -->
+            <!-- Domain 3 -->
             <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-                <h3>Pilar 3. PENATAAN SISTEM MANAJEMEN SDM APARATUR</h3>
+                <h3>Domain 3. Proses Bisnis Statistik</h3>
                 <div class="accordion" id="accordionTab3">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab3">
@@ -426,9 +426,9 @@
                 </div>
             </div>
 
-            <!-- Pilar 4 -->
+            <!-- Domain 4 -->
             <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
-                <h3>Pilar 4. PENGUATAN AKUNTABILITAS</h3>
+                <h3>Domain 4. Kelembagaan</h3>
                 <div class="accordion" id="accordionTab4">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab4">
@@ -507,9 +507,9 @@
                 </div>
             </div>
 
-            <!-- Pilar 5 -->
+            <!-- Domain 5 -->
             <div class="tab-pane fade" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
-                <h3>Pilar 5. PENGUATAN PENGAWASAN</h3>
+                <h3>Domain 5. Sistem Statistik Nasional</h3>
                 <div class="accordion" id="accordionTab5">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading1Tab5">
@@ -644,131 +644,14 @@
                 </div>
             </div>
 
-            <!-- Pilar 6 -->
+            <!-- Domain 6 -->
             <div class="tab-pane fade" id="tab6" role="tabpanel" aria-labelledby="tab6-tab">
-                <h3>Pilar 6. PENINGKATAN KUALITAS PELAYANAN PUBLIK</h3>
+                <h3>Bentuk Pembinaan</h3>
                 <div class="accordion" id="accordionTab6">
                     <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading1Tab6">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab6" aria-expanded="true" aria-controls="collapse1Tab6">
-                                Standar Pelayanan
-                            </button>
-                        </h2>
                         <div id="collapse1Tab6" class="accordion-collapse collapse show" aria-labelledby="heading1Tab6" data-bs-parent="#accordionTab6">
                             <div class="accordion-body">
-                                <br>
-                                <p>a. Terdapat kebijakan standar pelayanan</p>
-                                <p>b. Standar pelayanan telah dimaklumatkan</p>
-                                <p>c. Dilakukan reviu dan perbaikan atas standar pelayanan</p>
-                                <p>d. telah melakukan publikasi atas standar pelayanan dan maklumat pelayanan</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading2Tab6">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2Tab6" aria-expanded="false" aria-controls="collapse2Tab6">
-                                Budaya Pelayanan Prima
-                            </button>
-                        </h2>
-                        <div id="collapse2Tab6" class="accordion-collapse collapse" aria-labelledby="heading2Tab6" data-bs-parent="#accordionTab6">
-                            <div class="accordion-body">
-                                <br>
-                                <p>a. Telah dilakukan berbagai upaya peningkatan kemampuan dan/atau kompetensi tentang penerapan budaya pelayanan prima</p>
-                                <p>b. Informasi tentang pelayanan mudah diakses melalui berbagai media</p>
-                                <p>c. Telah terdapat sistem pemberian penghargaan dan sanksi bagi petugas pemberi pelayanan</p>
-                                <p>d.Telah terdapat sistem pemberian kompensasi kepada penerima layanan bila layanan tidak sesuai standar</p>
-                                <p>e. Terdapat sarana layanan terpadu/terintegrasi</p>
-                                <p>f. Terdapat inovasi pelayanan</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading3Tab6">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3Tab6" aria-expanded="false" aria-controls="collapse3Tab6">
-                                Pengelolaan Pengaduan
-                            </button>
-                        </h2>
-                        <div id="collapse3Tab6" class="accordion-collapse collapse" aria-labelledby="heading3Tab6" data-bs-parent="#accordionTab6">
-                            <div class="accordion-body">
-                                <br>
-                                <p>a. Terdapat media pengaduan dan konsultasi pelayanan yang terintegrasi dengan SP4N-Lapor!</p>
-                                <p>b. Terdapat unit yang mengelola pengaduan dan konsultasi pelayanan</p>
-                                <p>c. Telah dilakukan evaluasi atas penanganan keluhan/masukan dan konsultasi</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading4Tab6">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4Tab6" aria-expanded="false" aria-controls="collapse4Tab6">
-                                Penilaian Kepuasan terhadap Pelayanan
-                            </button>
-                        </h2>
-                        <div id="collapse4Tab6" class="accordion-collapse collapse" aria-labelledby="heading4Tab6" data-bs-parent="#accordionTab6">
-                            <div class="accordion-body">
-                                <br>
-                                <p>a. Telah dilakukan survey kepuasan masyarakat terhadap pelayanan</p>
-                                <p>b. Hasil survei kepuasan masyarakat dapat diakses secara terbuka</p>
-                                <p>c. Dilakukan tindak lanjut atas hasil survei kepuasan masyarakat</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading5Tab6">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5Tab6" aria-expanded="false" aria-controls="collapse5Tab6">
-                                Pemanfaatan Teknologi Informasi
-                            </button>
-                        </h2>
-                        <div id="collapse5Tab6" class="accordion-collapse collapse" aria-labelledby="heading5Tab6" data-bs-parent="#accordionTab6">
-                            <div class="accordion-body">
-                                <br>
-                                <p>a. Telah menerapkan teknologi informasi dalam memberikan pelayanan</p>
-                                <p>b. Telah membangun database pelayanan yang terintegrasi</p>
-                                <p>c. Telah dilakukan perbaikan secara terus menerus</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading6Tab6">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6Tab6" aria-expanded="false" aria-controls="collapse6Tab6">
-                                Upaya dan/atau Inovasi Pelayanan Publik
-                            </button>
-                        </h2>
-                        <div id="collapse6Tab6" class="accordion-collapse collapse" aria-labelledby="heading6Tab6" data-bs-parent="#accordionTab6">
-                            <div class="accordion-body">
-                                <br>
-                                <p>a. Upaya dan/atau inovasi telah mendorong perbaikan pelayanan publik pada:</p>
-                                <ol>
-                                    <li>Kesesuaian Persyaratan</li>
-                                    <li>Kemudahan Sistem, Mekanisme, dan Prosedur</li>
-                                    <li>Kecepatan Waktu Penyelesaian</li> 
-                                    <li>Kejelasan Biaya/Tarif, Gratis</li>
-                                    <li>Kualitas Produk Spesifikasi Jenis Pelayanan</li>
-                                    <li>Kompetensi Pelaksana/Web</li>
-                                    <li>Perilaku Pelaksana/Web</li>
-                                    <li>Kualitas Sarana dan prasarana</li>
-                                    <li>Penanganan Pengaduan, Saran dan Masukan</li>
-                                </ol>
-                                <p>
-                                    b. Upaya dan/atau inovasi pada perijinan/pelayanan telah dipermudah:</p>
-                                    <ol>
-                                    <li>Waktu lebih cepat</li>
-                                    <li>Pelayanan Publik yang terpadu</li>
-                                    <li>Alur lebih pendek/singkat</li>
-                                    <li>Terintegrasi dengan aplikasi</li>
-                                    </ol>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading7Tab6">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7Tab6" aria-expanded="false" aria-controls="collapse7Tab6">
-                                Penanganan Pengaduan Pelayanan dan Konsultasi
-                            </button>
-                        </h2>
-                        <div id="collapse7Tab6" class="accordion-collapse collapse" aria-labelledby="heading7Tab6" data-bs-parent="#accordionTab6">
-                            <div class="accordion-body">
-                                <br>
-                                <p>Penanganan pengaduan pelayanan dilakukan melalui berbagai kanal/media secara responsive dan bertanggung jawab</p>
+                                <iframe src="https://pss3200.streamlit.app/Pembinaan" width="100%" height="600px"></iframe>
                             </div>
                         </div>
                     </div>
