apdet konten pss dan epss

--- a/epss.html
+++ b/epss.html
@@ -408,7 +408,11 @@
                         <div id="collapse1Tab4" class="accordion-collapse collapse" aria-labelledby="heading1Tab4" data-bs-parent="#accordionTab4">
                             <div class="accordion-body">
                                 <br>
-                                <p></p>
+                                <p>Penjaminan Transparansi Informasi Statistik adalah aktivitas yang
+                                    dilakukan untuk menetapkan hak pengguna data dalam memanfaatkan
+                                    data statistik.</p>
+                                    <p>Instansi penyelenggara kegiatan statistik tersebut wajib memberikan
+                                    kesempatan yang sama kepada masyarakat untuk mengetahui dan memperoleh manfaat dari statistik yang tersedia sesuai dengan ketentuan yang berlaku.</p>
                             </div>
                         </div>
                     </div>
@@ -421,7 +425,10 @@
                         <div id="collapse2Tab4" class="accordion-collapse collapse" aria-labelledby="heading2Tab4" data-bs-parent="#accordionTab4">
                             <div class="accordion-body">
                                 <br>
-                                <p></p>
+                                <p>Penjaminan Netralitas dan Obyektivitas terhadap Penggunaan Sumber Data
+                                    dan Metodologi bertujuan menjamin data/informasi yang dihasilkan objektif
+                                    sesuai dengan keilmuan statistik, dengan rujukan atau standar nasional
+                                    dan internasional, serta mempertimbangkan efisiensi dan efektivitas.</p>
                             </div>
                         </div>
                     </div>
@@ -434,7 +441,8 @@
                         <div id="collapse3Tab4" class="accordion-collapse collapse" aria-labelledby="heading3Tab4" data-bs-parent="#accordionTab4">
                             <div class="accordion-body">
                                 <br>
-                                <p></p>
+                                <p>Penjaminan Kualitas Data dilakukan dalam rangka memberikan informasi
+                                    kualitas data kepada pengguna agar dapat bermanfaat secara optimal.</p>
                             </div>
                         </div>
                     </div>
@@ -447,7 +455,18 @@
                         <div id="collapse4Tab4" class="accordion-collapse collapse" aria-labelledby="heading4Tab4" data-bs-parent="#accordionTab4">
                             <div class="accordion-body">
                                 <br>
-                                <p></p>
+                                <p>Penjaminan Konfidensialitas Data dilakukan dalam rangka menjamin
+                                    kerahasiaan data individu agar tidak disalahgunakan oleh pihak yang tidak
+                                    bertanggungjawab</p>
+                                    <p>• Setiap instansi penyelenggara statistikharus menjamin terjaga dan
+                                    terlindunginya privasi dari sumber/penyedia data.</p>
+                                    <p>• Data dan sumber data harus dijaga kerahasiaannya, tidak boleh diakses
+                                    oleh pengguna yang tidak berhak dan hanya digunakan untuk keperluan
+                                    statistik.</p>
+                                    <p>• Suatu statistik dianggap tidak memenuhi prinsip keamanan dan
+                                    kerahasiaan ketika suatu unit statistik dapat diidentifikasi (baik secara
+                                    langsung atau tidak langsung) sehingga terbuka informasi individu dari
+                                    sumber data.</p>
                             </div>
                         </div>
                     </div>
@@ -460,7 +479,10 @@
                         <div id="collapse5Tab4" class="accordion-collapse collapse" aria-labelledby="heading5Tab4" data-bs-parent="#accordionTab4">
                             <div class="accordion-body">
                                 <br>
-                                <p></p>
+                                <p>Penerapan Kompetensi Sumber Daya Manusia Bidang Statistik adalah
+                                    upaya penggunaan sumber daya manusia yang tersedia baik dari segi
+                                    kualitas maupun kuantitasnya untuk melaksanakan kegiatan statistik,
+                                    mulai dari pengembangan, produksi, dan diseminasi statistik.</p>
                             </div>
                         </div>
                     </div>
@@ -473,7 +495,21 @@
                         <div id="collapse6Tab4" class="accordion-collapse collapse" aria-labelledby="heading6Tab4" data-bs-parent="#accordionTab4">
                             <div class="accordion-body">
                                 <br>
-                                <p></p>
+                                <p>Penerapan Kompetensi Sumber Daya Manusia Bidang Manajemen Data
+                                    adalah upaya penggunaan sumber daya manusia yang tersedia baik dari
+                                    segi kualitas maupun kuantitasnya untuk melaksanakan kegiatan
+                                    manajemen data.</p>
+                                    <p>Manajemen data adalah proses pengelolaan data mencakup perencanaan,
+                                        pengumpulan, pemeriksaan, dan penyebarluasan yang dilakukan secara
+                                        efektif dan efisien sehingga diperoleh data yang akurat, mutakhir, dan
+                                        terintegrasi.</p>
+                                        <p>• Manajemen data akan memastikan seluruh data secara aktual, akurat,
+                                        aman dan juga tersedia untuk semua pihak yang memiliki kepentingan.
+                                        Kegiatan ini dilakukan agar bisa mengumpulkan, menyimpan dan juga
+                                        menggunakan data secara aman, hemat biaya dan juga lebih efisien.</p>
+                                        <p>• Manajemen data mampu membantu dan juga memaksimalkan penggunaan
+                                        data dalam batas kebijakan dan juga regulasi yang nantinya bisa digunakan
+                                        untuk mengambil kebijakan secara tepat.</p>
                             </div>
                         </div>
                     </div>
@@ -486,7 +522,13 @@
                         <div id="collapse7Tab4" class="accordion-collapse collapse" aria-labelledby="heading7Tab4" data-bs-parent="#accordionTab4">
                             <div class="accordion-body">
                                 <br>
-                                <p></p>
+                                <p>Perangkat kerja Kolaborasi Kegiatan Statistik Instansi Pusat dan Pemerintah
+                                    Daerah adalah sekelompok orang/perangkat yang tergabung dalam
+                                    kelompok/tim dengan tugas mengkoordinasikan kegiatan statistik yang
+                                    diperoleh dari berbagai tingkatan, termasuk lintas lokasi dan sektoral.</p>
+                                    <p>• Kolaborasi penyelenggaraan kegiatan statistik diperlukan agar pelaksanaan
+                                    kegiatan statistik dapat berjalan secara terstruktur secara formal dan
+                                    dituangkan dalam dokumen resmi</p>
                             </div>
                         </div>
                     </div>
@@ -499,7 +541,11 @@
                         <div id="collapse8Tab4" class="accordion-collapse collapse" aria-labelledby="heading8Tab4" data-bs-parent="#accordionTab4">
                             <div class="accordion-body">
                                 <br>
-                                <p></p>
+                                <p>Penyelenggaraan Forum Satu Data sebagai wadah
+                                    komunikasi dan koordinasi Instansi Pusat dan/atau Instansi Daerah untuk
+                                    penyelenggaraan Satu Data Indonesia, mencakup aktivitas merencanakan
+                                    pengorganisasian Statistik Sektoral di Instansi Pusat dan Pemerintah
+                                    Daerah.</p>
                             </div>
                         </div>
                     </div>
@@ -512,7 +558,10 @@
                         <div id="collapse9Tab4" class="accordion-collapse collapse" aria-labelledby="heading9Tab4" data-bs-parent="#accordionTab4">
                             <div class="accordion-body">
                                 <br>
-                                <p></p>
+                                <p>Kolaborasi Statistik dengan Pembina Data Statistik
+                                    mencakup kegiatan konsultasi, koordinasi, dan kolaborasi bersama antar
+                                    penyelenggara kegiatan statistik dengan Pembina Data dalam menghasilkan
+                                    statistik sektoral.</p>
                             </div>
                         </div>
                     </div>
@@ -525,7 +574,12 @@
                         <div id="collapse10Tab4" class="accordion-collapse collapse" aria-labelledby="heading10Tab4" data-bs-parent="#accordionTab4">
                             <div class="accordion-body">
                                 <br>
-                                <p></p>
+                                <p>Tugas Walidata tingkat daerah:</p>
+                                    <p>✓ Memeriksa kesesuaian data yang disampaikan oleh Produsen Data
+                                    tingkat daerah sesuai dengan prinsip Satu Data Indonesia.</p>
+                                    <p>✓ Menyebarluaskan data dan metadata di portal Satu Data Indonesia.</p>
+                                    <p>✓ Membantu Pembina Data tingkat daerah dalam membina Produsen
+                                    Data tingkat daerah.</p>
                             </div>
                         </div>
                     </div>
@@ -545,7 +599,12 @@
                         <div id="collapse1Tab5" class="accordion-collapse collapse show" aria-labelledby="heading1Tab5" data-bs-parent="#accordionTab5">
                             <div class="accordion-body">
                                 <br>
-                                <p></p>
+                                <p>Indikator ini bertujuan untuk mengidentifikasi apakah Instansi Pusat dan
+                                    Pemerintah Daerah terkait mampu menjawab banyaknya data data statistik
+                                    dasar yang telah dihasilkan oleh BPS sebagai leading sektor untuk untuk
+                                    mendukung pembangunan nasional serta jalannya pemerintahan,
+                                    khususnya dalam aspek perencanaan, monitoring, dan evaluasi di instansi
+                                    yang bersangkutan.</p>
                             </div>
                         </div>
                     </div>
@@ -558,7 +617,10 @@
                         <div id="collapse2Tab5" class="accordion-collapse collapse" aria-labelledby="heading2Tab5" data-bs-parent="#accordionTab5">
                             <div class="accordion-body">
                                 <br>
-                                <p></p>
+                                <p>Indikator ini bertujuan untuk mengidentifikasi apakah Instansi Pusat dan
+                                    Pemerintah Daerah terkait telah memanfaatkan berbagai data statistik
+                                    sektoral yang tersedia di internal/eksternal Instansi Pusat dan Pemerintah
+                                    Daerah untuk untuk mendukung pembangunan nasional serta jalannya pemerintahan, khususnya dalam aspek perencanaan, monitoring, dan evaluasi di instansi yang bersangkutan.</p>
                             </div>
                         </div>
                     </div>
@@ -571,7 +633,9 @@
                         <div id="collapse3Tab5" class="accordion-collapse collapse" aria-labelledby="heading3Tab5" data-bs-parent="#accordionTab5">
                             <div class="accordion-body">
                                 <br>
-                                <p></p>
+                                <p>Sosialisasi dan Literasi Hasil Statistik melalui
+                                    peningkatan penyebarluasan dan edukasi terkait hasil statistik melalui
+                                    berbagai media.</p>
                             </div>
                         </div>
                     </div>
@@ -584,7 +648,16 @@
                         <div id="collapse4Tab5" class="accordion-collapse collapse" aria-labelledby="heading4Tab5" data-bs-parent="#accordionTab5">
                             <div class="accordion-body">
                                 <br>
-                                <p></p>
+                                <p>Indikator ini bertujuan untuk menilai apakah Instansi Pusat dan
+                                    Pemerintah Daerah telah:</p>
+                                    <p>✓ Melakukan pemberitahuan rancangan kegiatan statistik oleh instansi
+                                    pemerintah pusat dan pemerintah daerh kepada BPS di tingkat pusat
+                                    atau di tingkat daerah.</p>
+                                    <p>✓ Melakukan pemberitahuan rancangan untuk menjamin bahwa prosedur
+                                    dan kaidah statistik akan dan telah diterapkan/dilakukan oleh
+                                    penyelenggara kegiatan statistik dalam rangka peningkatan kualitas
+                                    statistik yang dihasilkan.</p>
+                                    <p>✓ Mendapatkan rekomendasi dari BPS</p>
                             </div>
                         </div>
                     </div>
@@ -597,7 +670,12 @@
                         <div id="collapse5Tab5" class="accordion-collapse collapse" aria-labelledby="heading5Tab5" data-bs-parent="#accordionTab5">
                             <div class="accordion-body">
                                 <br>
-                                <p></p>
+                                <p>Indikator ini bertujuan untuk mengetahui apakan Instansi
+                                    Pusat/Pemerintah Daerah terkait telah melakukan perencanaan
+                                    pembangunan statistik dalam penyelenggaraan kegiatan statistik dengan
+                                    mengimplementasikan kaidah ilmu pengetahuan bidang statistik untuk
+                                    menjamin penyelenggaraan yang efektif dan efesien serta hasil yang tidak
+                                    bias.</p>
                             </div>
                         </div>
                     </div>
@@ -610,7 +688,11 @@
                         <div id="collapse6Tab5" class="accordion-collapse collapse" aria-labelledby="heading6Tab5" data-bs-parent="#accordionTab5">
                             <div class="accordion-body">
                                 <br>
-                                <p></p>
+                                <p>Penyebarluasan Data mengacu pada berbagi data dan alat analisis data
+                                    dengan publik. Ide utama di balik penyebarluasan data adalah untuk
+                                    membuat wawasan berbasis data tersedia untuk semua orang. Konsep
+                                    sosialisasi data bertujuan untuk melibatkan publik untuk menganalisis,
+                                    dan bereaksi terhadap data.</p>
                             </div>
                         </div>
                     </div>
@@ -623,7 +705,13 @@
                         <div id="collapse7Tab5" class="accordion-collapse collapse" aria-labelledby="heading7Tab5" data-bs-parent="#accordionTab5">
                             <div class="accordion-body">
                                 <br>
-                                <p></p>
+                                <p>Pemanfaatan big data untuk mendukung statistik mengacu pada pada
+                                    kumpulan data yang besar atau kompleks sehingga dibutuhkan aplikasi
+                                    pemrosesan data yang tidak tradisional. Termasuk didalamnya adalah
+                                    proses analitik untuk mengekstrak nilai dari data.</p>
+                                    <p>• Pemanfaatan big data memerlukan akses ke data, analisisnya, dan integrasi
+                                    ke dalam pengambilan keputusan, serta dalam rangka meningkatkan
+                                    efisiensi operasional dan produktivitas dalam produksi statistik.</p>
                             </div>
                         </div>
                     </div>
