--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">PEKPPP</a>
+                        <a class="nav-link" aria-current="page" href="index.html">PEKPPP</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="rbzi.html">WBK-WBBM</a>
@@ -32,13 +32,10 @@
                         <a class="nav-link" href="pss.html">P S S</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="postat.html">Pojok Statistik</a>
+                        <a class="nav-link active" href="epss.html">E P S S</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="cantik.html">Desa Cantik</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="epss.html">E P S S</a>
                     </li>
                     <!-- New Theme Settings Nav Item -->
                     <li class="nav-item">
