--- a/sakip.html
+++ b/sakip.html
@@ -26,19 +26,16 @@
                         <a class="nav-link" href="rbzi.html">WBK-WBBM</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="sakip.html">SAKIP</a>
+                        <a class="nav-link" href="sakip.html">SAKIP</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="pss.html">P S S</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="postat.html">Pojok Statistik</a>
+                        <a class="nav-link active" href="epss.html">E P S S</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="cantik.html">Desa Cantik</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="epss.html">E P S S</a>
                     </li>
                     <!-- New Theme Settings Nav Item -->
                     <li class="nav-item">
