perbaikan menu aktif

--- a/sakip.html
+++ b/sakip.html
@@ -26,13 +26,13 @@
                         <a class="nav-link" href="rbzi.html">WBK-WBBM</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sakip.html">SAKIP</a>
+                        <a class="nav-link active" href="sakip.html">SAKIP</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="pss.html">P S S</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="epss.html">E P S S</a>
+                        <a class="nav-link" href="epss.html">E P S S</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="cantik.html">Desa Cantik</a>
