--- a/cantik.html
+++ b/cantik.html
@@ -32,10 +32,10 @@
                         <a class="nav-link" href="pss.html">P S S</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="epss.html">E P S S</a>
+                        <a class="nav-link" href="epss.html">E P S S</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cantik.html">Desa Cantik</a>
+                        <a class="nav-link active" href="cantik.html">Desa Cantik</a>
                     </li>
                     <!-- New Theme Settings Nav Item -->
                     <li class="nav-item">
