--- a/pss.html
+++ b/pss.html
@@ -29,10 +29,10 @@
                         <a class="nav-link" href="sakip.html">SAKIP</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pss.html">P S S</a>
+                        <a class="nav-link active" href="pss.html">P S S</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="epss.html">E P S S</a>
+                        <a class="nav-link" href="epss.html">E P S S</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="cantik.html">Desa Cantik</a>
